--- a/views/experiments/exp6.ejs
+++ b/views/experiments/exp6.ejs
@@ -286,6 +286,10 @@
             </div><!--end of row-->
         </div><!--end of container-fluid-->
         <br><br>
+                                                                                                           
+        <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+                                                                                                            
                                    <%- include('../partials/footer') %>
 
     </body>
