added about page

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header') %>
 
-<title>Write title for each page here</title>
+<title>Profile</title>
 
 <!-- Here you we will include other css and js files that are not to be used for every age -->
 
