--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -15,7 +15,7 @@
 	<div id="navbarCollapse" class="collapse navbar-collapse justify-content-start">
 		<ul class="nav navbar-nav">
 			<li class="nav-item"><a href="/" class="nav-link">Home</a></li>
-			<li class="nav-item"><a href="#" class="nav-link">About</a></li>			
+			<li class="nav-item"><a href="/about" class="nav-link">About</a></li>			
 			<li class="nav-item"><a href="/team" class="nav-link">Team</a></li>
 			<li class="nav-item"><a href="/profile" class="nav-link">Profile</a></li>
             
