--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -6,15 +6,15 @@
 				<a href="https://www.lnmiit.ac.in/"><img style="height: 75px;width: 150px;" src="https://media.glassdoor.com/sqll/513654/the-lnmiit-squarelogo-1460988064770.png" alt="LNMIIT Logo"></a>
 
 				<p class="footer-links">
-					<a href="#" class="link-1">Home</a>
+					<a href="/" class="link-1">Home</a>
 					
-					<a href="#">About</a>
+					<a href="/about">About</a>
 				
-					<a href="#">Team</a>
+					<a href="/team">Team</a>
 				
-					<a href="#">Instructor</a>
+					<a href="/instructor">Instructor</a>
 					
-					<a href="#">Contact</a>
+					<a href="/contact">Contact</a>
 					
 				</p>
 			</div>
@@ -24,7 +24,7 @@
 
 				<div>
 					<i class="fa fa-phone"></i>
-					<p>0141-2688090</p>
+					<p>0141-2688090, </p>
 					<p> 0141-5191851/852</p>
 				</div>
 
@@ -39,7 +39,7 @@
 
 				<p class="footer-company-about">
 					<span>Address</span>
-					<p><span>LNMIIT,</span>Rupa ki Nangal, Post-Sumel, Via-Jamdoli, Jaipur-302031,</p>
+					<p><span>LNMIIT,</span>Rupa ki Nangal, Post-Sumel, Via-Jamdoli, Jaipur-302031</p>
 				</p>
 
 				<div class="footer-icons">
