--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -3,7 +3,7 @@
 
 <nav class="navbar navbar-default navbar-expand-lg navbar-light">
 	<div class="navbar-header d-flex col">
-		<a class="navbar-brand" href="#">CLASSICAL<b>PHYSICS</b></a>  		
+		<a class="navbar-brand" href="/">CLASSICAL<b>PHYSICS</b></a>  		
 		<button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle navbar-toggler ml-auto">
 			<span class="navbar-toggler-icon"></span>
 			<span class="icon-bar"></span>
@@ -22,12 +22,7 @@
 			<li class="nav-item"><a href="/instructor" class="nav-link">Instructor</a></li>
 			<li class="nav-item"><a href="/contact" class="nav-link">Contact</a></li>
 		</ul>
-		<form class="navbar-form form-inline">
-			<div class="input-group search-box">								
-				<input type="text" id="search" class="form-control" placeholder="Search here...">
-				<span class="input-group-addon"><i class="material-icons">&#xE8B6;</i></span>
-			</div>
-		</form>
+		
 		<ul class="nav navbar-nav navbar-right ml-auto">			
 
 				<% if (user) { %>
