--- a/views/notes.ejs
+++ b/views/notes.ejs
@@ -17,7 +17,7 @@
 <div class="row mb-5">
 
     <% if(files.length===0) {%>
-    <section></section>
+    <section><h1>WILL BE UPLOADED SOON</h1></section>
     <% } %>
     
     
