--- a/views/team.ejs
+++ b/views/team.ejs
@@ -83,9 +83,7 @@ $(window).resize(function() {
               <div class="skills">
     <hr class="hr-text" data-content="MEET THE TEAM" style="font-size: x-large;"></div>
   </div>
-  <div class="container-fluid">
-  Current viewport width:<span id="monitor"></span>
-</div>
+  
 
 
 
@@ -94,19 +92,14 @@ $(window).resize(function() {
        <div class="col-md-4 col-sm-6 col-xs-12">
             <article class="material-card Red">
                 <h2>
-                    <span>Christopher Walken</span>
-                    <strong>
-                        <i class="fa fa-fw fa-star"></i>
-                        The Deer Hunter
-                    </strong>
+                    <span>Garvit Modi</span>
+                    
                 </h2>
                 <div class="mc-content">
                     <div class="img-container">
-                        <img class="img-responsive" src="http://u.lorenzoferrara.net/marlenesco/material-card/thumb-christopher-walken.jpg">
+                        <img class="img-responsive" src="/public/team/garvit.jpeg">
                     </div>
-                    <div class="mc-description">
-                        He has appeared in more than 100 films and television shows, including The Deer Hunter, Annie Hall, The Prophecy trilogy, The Dogs of War ...
-                    </div>
+                    
                 </div>
                 <a class="mc-btn-action">
                     <i class="fa fa-bars"></i>
@@ -115,29 +108,24 @@ $(window).resize(function() {
                     <h4>
                         Social
                     </h4>
-                    <a class="fa fa-fw fa-facebook"></a>
-                    <a class="fa fa-fw fa-twitter"></a>
-                    <a class="fa fa-fw fa-linkedin"></a>
-                    <a class="fa fa-fw fa-google-plus"></a>
+                    <a class="fa fa-fw fa-facebook" href="https://www.facebook.com/garvit.modi.77"></a>
+                    <a class="fa fa-fw fa-twitter" href="https://twitter.com/ModiGarvit"></a>
+                    <a class="fa fa-fw fa-linkedin" href="https://www.linkedin.com/in/garvit-modi-b49188173"></a>
+                    <a class="fa fa-fw fa-envelope" href="mailto:garvitmodi.369@gmail.com"></a>
                 </div>
             </article>
         </div>
          <div class="col-md-4 col-sm-6 col-xs-12">
             <article class="material-card Red">
                 <h2>
-                    <span>Christopher Walken</span>
-                    <strong>
-                        <i class="fa fa-fw fa-star"></i>
-                        The Deer Hunter
-                    </strong>
+                    <span>Bharat Agrawal</span>
+                  
                 </h2>
                 <div class="mc-content">
                     <div class="img-container">
-                        <img class="img-responsive" src="http://u.lorenzoferrara.net/marlenesco/material-card/thumb-christopher-walken.jpg">
+                        <img class="img-responsive" src="../public/team/bharat.jpg">
                     </div>
-                    <div class="mc-description">
-                        He has appeared in more than 100 films and television shows, including The Deer Hunter, Annie Hall, The Prophecy trilogy, The Dogs of War ...
-                    </div>
+                    
                 </div>
                 <a class="mc-btn-action">
                     <i class="fa fa-bars"></i>
@@ -146,29 +134,24 @@ $(window).resize(function() {
                     <h4>
                         Social
                     </h4>
-                    <a class="fa fa-fw fa-facebook"></a>
-                    <a class="fa fa-fw fa-twitter"></a>
-                    <a class="fa fa-fw fa-linkedin"></a>
-                    <a class="fa fa-fw fa-google-plus"></a>
+                    <a class="fa fa-fw fa-facebook" href="https://www.facebook.com/bharat.agrawal.3954/"></a>
+                    <a class="fa fa-fw fa-twitter" href="https://twitter.com/BharatA23385356"></a>
+                    <a class="fa fa-fw fa-linkedin" href="https://www.linkedin.com/in/bharat-agrawal-ba6a87145"></a>
+                    <a class="fa fa-fw fa-envelope" href="mailto:bharatagrawal257@gmail.com"></a>
                 </div>
             </article>
         </div>
          <div class="col-md-4 col-sm-6 col-xs-12">
             <article class="material-card Red">
                 <h2>
-                    <span>Christopher Walken</span>
-                    <strong>
-                        <i class="fa fa-fw fa-star"></i>
-                        The Deer Hunter
-                    </strong>
+                    <span>Jayant Khandelwal</span>
+                    
                 </h2>
                 <div class="mc-content">
                     <div class="img-container">
-                        <img class="img-responsive" src="http://u.lorenzoferrara.net/marlenesco/material-card/thumb-christopher-walken.jpg">
+                        <img class="img-responsive" src="../public/team/jayant.jpg">
                     </div>
-                    <div class="mc-description">
-                        He has appeared in more than 100 films and television shows, including The Deer Hunter, Annie Hall, The Prophecy trilogy, The Dogs of War ...
-                    </div>
+                    
                 </div>
                 <a class="mc-btn-action">
                     <i class="fa fa-bars"></i>
@@ -177,29 +160,24 @@ $(window).resize(function() {
                     <h4>
                         Social
                     </h4>
-                    <a class="fa fa-fw fa-facebook"></a>
-                    <a class="fa fa-fw fa-twitter"></a>
-                    <a class="fa fa-fw fa-linkedin"></a>
-                    <a class="fa fa-fw fa-google-plus"></a>
+                    <a class="fa fa-fw fa-facebook" href="https://www.facebook.com/jayant.khandelwal.94"></a>
+                    <a class="fa fa-fw fa-twitter" href="https://twitter.com/jayantkhandelw2"></a>
+                    <a class="fa fa-fw fa-linkedin" href="https://www.linkedin.com/in/jayant-khandelwal-2879aa157/"></a>
+                    <a class="fa fa-fw fa-envelope" href="mailto:jayant.khandelwal7@gmail.com"></a>
                 </div>
             </article>
         </div>
          <div class="col-md-4 col-sm-6 col-xs-12">
             <article class="material-card Red">
                 <h2>
-                    <span>Christopher Walken</span>
-                    <strong>
-                        <i class="fa fa-fw fa-star"></i>
-                        The Deer Hunter
-                    </strong>
+                    <span>Pursharth Maheshwari</span>
+                    
                 </h2>
                 <div class="mc-content">
                     <div class="img-container">
-                        <img class="img-responsive" src="http://u.lorenzoferrara.net/marlenesco/material-card/thumb-christopher-walken.jpg">
+                        <img class="img-responsive" src="../public/team/pursharth.jpg">
                     </div>
-                    <div class="mc-description">
-                        He has appeared in more than 100 films and television shows, including The Deer Hunter, Annie Hall, The Prophecy trilogy, The Dogs of War ...
-                    </div>
+                    
                 </div>
                 <a class="mc-btn-action">
                     <i class="fa fa-bars"></i>
@@ -208,29 +186,24 @@ $(window).resize(function() {
                     <h4>
                         Social
                     </h4>
-                    <a class="fa fa-fw fa-facebook"></a>
-                    <a class="fa fa-fw fa-twitter"></a>
-                    <a class="fa fa-fw fa-linkedin"></a>
-                    <a class="fa fa-fw fa-google-plus"></a>
+                    <a class="fa fa-fw fa-facebook" href="https://www.facebook.com/pursharth.maheshwari.9"></a>
+                    <a class="fa fa-fw fa-twitter" href="https://twitter.com/PursharthMahes1?s=09"></a>
+                    <a class="fa fa-fw fa-linkedin" href="https://www.linkedin.com/in/pursharth-maheshwari-b94130174"></a>
+                    <a class="fa fa-fw fa-envelope" href="mailto:pursharthm@gmail.com"></a>
                 </div>
             </article>
         </div>
          <div class="col-md-4 col-sm-6 col-xs-12">
             <article class="material-card Red">
                 <h2>
-                    <span>Christopher Walken</span>
-                    <strong>
-                        <i class="fa fa-fw fa-star"></i>
-                        The Deer Hunter
-                    </strong>
+                    <span>Vishal Jain</span>
+                    
                 </h2>
                 <div class="mc-content">
                     <div class="img-container">
-                        <img class="img-responsive" src="http://u.lorenzoferrara.net/marlenesco/material-card/thumb-christopher-walken.jpg">
+                        <img class="img-responsive" src="../public/team/vishal.jpeg">
                     </div>
-                    <div class="mc-description">
-                        He has appeared in more than 100 films and television shows, including The Deer Hunter, Annie Hall, The Prophecy trilogy, The Dogs of War ...
-                    </div>
+                   
                 </div>
                 <a class="mc-btn-action">
                     <i class="fa fa-bars"></i>
@@ -239,29 +212,24 @@ $(window).resize(function() {
                     <h4>
                         Social
                     </h4>
-                    <a class="fa fa-fw fa-facebook"></a>
-                    <a class="fa fa-fw fa-twitter"></a>
-                    <a class="fa fa-fw fa-linkedin"></a>
-                    <a class="fa fa-fw fa-google-plus"></a>
+                    <a class="fa fa-fw fa-facebook" href="https://www.facebook.com/profile.php?id=100026494492146"></a>
+                    <a class="fa fa-fw fa-twitter" href="#"></a>
+                    <a class="fa fa-fw fa-linkedin" href="https://www.linkedin.com/in/vishal-jain-ab2151197/"></a>
+                    <a class="fa fa-fw fa-envelope" href="mailto:vishaljain63957@gmail.com"></a>
                 </div>
             </article>
         </div>
          <div class="col-md-4 col-sm-6 col-xs-12">
             <article class="material-card Red">
                 <h2>
-                    <span>Christopher Walken</span>
-                    <strong>
-                        <i class="fa fa-fw fa-star"></i>
-                        The Deer Hunter
-                    </strong>
+                    <span>Siddharth Sharma</span>
+                    
                 </h2>
                 <div class="mc-content">
                     <div class="img-container">
-                        <img class="img-responsive" src="http://u.lorenzoferrara.net/marlenesco/material-card/thumb-christopher-walken.jpg">
+                        <img class="img-responsive" src="../public/team/siddharth.jpg">
                     </div>
-                    <div class="mc-description">
-                        He has appeared in more than 100 films and television shows, including The Deer Hunter, Annie Hall, The Prophecy trilogy, The Dogs of War ...
-                    </div>
+                    
                 </div>
                 <a class="mc-btn-action">
                     <i class="fa fa-bars"></i>
@@ -270,29 +238,24 @@ $(window).resize(function() {
                     <h4>
                         Social
                     </h4>
-                    <a class="fa fa-fw fa-facebook"></a>
-                    <a class="fa fa-fw fa-twitter"></a>
-                    <a class="fa fa-fw fa-linkedin"></a>
-                    <a class="fa fa-fw fa-google-plus"></a>
+                   <a class="fa fa-fw fa-facebook" href="https://www.facebook.com/profile.php?id=100000954955441"></a>
+                    <a class="fa fa-fw fa-twitter" href="https://twitter.com/innovatoronspr"></a>
+                    <a class="fa fa-fw fa-linkedin" href="https://www.linkedin.com/in/siddharthonspree/"></a>
+                    <a class="fa fa-fw fa-envelope" href="mailto:siddharthsharmajp@gmail.com"></a>
                 </div>
             </article>
         </div>
          <div class="col-md-4 col-sm-6 col-xs-12">
             <article class="material-card Red">
                 <h2>
-                    <span>Christopher Walken</span>
-                    <strong>
-                        <i class="fa fa-fw fa-star"></i>
-                        The Deer Hunter
-                    </strong>
+                    <span>Anurag Gupta</span>
+                    
                 </h2>
                 <div class="mc-content">
                     <div class="img-container">
-                        <img class="img-responsive" src="http://u.lorenzoferrara.net/marlenesco/material-card/thumb-christopher-walken.jpg">
+                        <img class="img-responsive" src="../public/team/anurag.jpg">
                     </div>
-                    <div class="mc-description">
-                        He has appeared in more than 100 films and television shows, including The Deer Hunter, Annie Hall, The Prophecy trilogy, The Dogs of War ...
-                    </div>
+                    
                 </div>
                 <a class="mc-btn-action">
                     <i class="fa fa-bars"></i>
@@ -301,29 +264,24 @@ $(window).resize(function() {
                     <h4>
                         Social
                     </h4>
-                    <a class="fa fa-fw fa-facebook"></a>
-                    <a class="fa fa-fw fa-twitter"></a>
-                    <a class="fa fa-fw fa-linkedin"></a>
-                    <a class="fa fa-fw fa-google-plus"></a>
+                    <a class="fa fa-fw fa-facebook" href="https://www.facebook.com/profile.php?id=100008128410319"></a>
+                    <a class="fa fa-fw fa-twitter" href="https://twitter.com/Anurag_gupta20?s=08"></a>
+                    <a class="fa fa-fw fa-linkedin" href="https://www.linkedin.com/in/anurag-gupta-850b30186"></a>
+                    <a class="fa fa-fw fa-envelope" href="mailto:ganurag886@gmail.com"></a>
                 </div>
             </article>
         </div>
          <div class="col-md-4 col-sm-6 col-xs-12">
             <article class="material-card Red">
                 <h2>
-                    <span>Christopher Walken</span>
-                    <strong>
-                        <i class="fa fa-fw fa-star"></i>
-                        The Deer Hunter
-                    </strong>
+                    <span>Rishabh Garg</span>
+                    
                 </h2>
                 <div class="mc-content">
                     <div class="img-container">
                         <img class="img-responsive" src="http://u.lorenzoferrara.net/marlenesco/material-card/thumb-christopher-walken.jpg">
                     </div>
-                    <div class="mc-description">
-                        He has appeared in more than 100 films and television shows, including The Deer Hunter, Annie Hall, The Prophecy trilogy, The Dogs of War ...
-                    </div>
+                    
                 </div>
                 <a class="mc-btn-action">
                     <i class="fa fa-bars"></i>
@@ -335,73 +293,11 @@ $(window).resize(function() {
                     <a class="fa fa-fw fa-facebook"></a>
                     <a class="fa fa-fw fa-twitter"></a>
                     <a class="fa fa-fw fa-linkedin"></a>
-                    <a class="fa fa-fw fa-google-plus"></a>
+                    <a class="fa fa-fw fa-envelope"></a>
                 </div>
             </article>
         </div>
-         <div class="col-md-4 col-sm-6 col-xs-12">
-            <article class="material-card Red">
-                <h2>
-                    <span>Christopher Walken</span>
-                    <strong>
-                        <i class="fa fa-fw fa-star"></i>
-                        The Deer Hunter
-                    </strong>
-                </h2>
-                <div class="mc-content">
-                    <div class="img-container">
-                        <img class="img-responsive" src="http://u.lorenzoferrara.net/marlenesco/material-card/thumb-christopher-walken.jpg">
-                    </div>
-                    <div class="mc-description">
-                        He has appeared in more than 100 films and television shows, including The Deer Hunter, Annie Hall, The Prophecy trilogy, The Dogs of War ...
-                    </div>
-                </div>
-                <a class="mc-btn-action">
-                    <i class="fa fa-bars"></i>
-                </a>
-                <div class="mc-footer">
-                    <h4>
-                        Social
-                    </h4>
-                    <a class="fa fa-fw fa-facebook"></a>
-                    <a class="fa fa-fw fa-twitter"></a>
-                    <a class="fa fa-fw fa-linkedin"></a>
-                    <a class="fa fa-fw fa-google-plus"></a>
-                </div>
-            </article>
-        </div>
-         <div class="col-md-4 col-sm-6 col-xs-12">
-            <article class="material-card Red">
-                <h2>
-                    <span>Christopher Walken</span>
-                    <strong>
-                        <i class="fa fa-fw fa-star"></i>
-                        The Deer Hunter
-                    </strong>
-                </h2>
-                <div class="mc-content">
-                    <div class="img-container">
-                        <img class="img-responsive" src="http://u.lorenzoferrara.net/marlenesco/material-card/thumb-christopher-walken.jpg">
-                    </div>
-                    <div class="mc-description">
-                        He has appeared in more than 100 films and television shows, including The Deer Hunter, Annie Hall, The Prophecy trilogy, The Dogs of War ...
-                    </div>
-                </div>
-                <a class="mc-btn-action">
-                    <i class="fa fa-bars"></i>
-                </a>
-                <div class="mc-footer">
-                    <h4>
-                        Social
-                    </h4>
-                    <a class="fa fa-fw fa-facebook"></a>
-                    <a class="fa fa-fw fa-twitter"></a>
-                    <a class="fa fa-fw fa-linkedin"></a>
-                    <a class="fa fa-fw fa-google-plus"></a>
-                </div>
-            </article>
-        </div>
-       
+         
     </div>
 </section>
 
