--- a/views/team.ejs
+++ b/views/team.ejs
@@ -81,7 +81,7 @@ $(window).resize(function() {
  
 <div class="container">
               <div class="skills">
-    <hr class="hr-text" data-content="MEET THE TEAM" style="font-size: x-large;"></div>
+    <hr class="hr-text" data-content="OUR TEAM" style="font-size: x-large;"></div>
   </div>
   
 
