--- a/views/team.ejs
+++ b/views/team.ejs
@@ -279,7 +279,7 @@ $(window).resize(function() {
                 </h2>
                 <div class="mc-content">
                     <div class="img-container">
-                        <img class="img-responsive" src="http://u.lorenzoferrara.net/marlenesco/material-card/thumb-christopher-walken.jpg">
+                        <img class="img-responsive" src="/public/team/rishabh.jpeg">
                     </div>
                     
                 </div>
@@ -290,10 +290,10 @@ $(window).resize(function() {
                     <h4>
                         Social
                     </h4>
-                    <a class="fa fa-fw fa-facebook"></a>
-                    <a class="fa fa-fw fa-twitter"></a>
-                    <a class="fa fa-fw fa-linkedin"></a>
-                    <a class="fa fa-fw fa-envelope"></a>
+                    <a class="fa fa-fw fa-facebook" href="https://www.facebook.com/rishabh.agarwal.52056/"></a>
+                    <a class="fa fa-fw fa-twitter" href="https://twitter.com/Rishabh69973557"></a>
+                    <a class="fa fa-fw fa-linkedin" href="https://www.linkedin.com/in/rishabh-garg-339358179/"></a>
+                    <a class="fa fa-fw fa-envelope" href="mailto:18ucs020@lnmiit.ac.in"></a>
                 </div>
             </article>
         </div>
