--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,7 +2,165 @@
 
 <title>Home</title>
 
+
 <!-- Here you we will include other css and js files that are not to be used for every age -->
+<style>
+	.mainer{
+	background-image : url("../public/team/back.png");
+	background-repeat: no-repeat;
+	height: 100vh;
+    width: 100%;
+	margin-bottom: 15px;
+	margin-top: -20px;
+	position: relative;
+    font-family: Heletica;
+    text-transform: uppercase;
+    font-weight: lighter;
+    justify-content: center;
+    
+} 
+.modifier h1{
+    
+	text-align: center;
+	color:rgb(157, 202, 198);
+	margin-top:0px;
+	padding-top:40px;
+	margin-bottom: 150px;
+} /*
+.mainer { 
+    position: relative; 
+    height: 100vh;
+    width: 100%;
+    margin-bottom: 15px;
+	margin-top: -20px;
+    align-items: center;
+    justify-content: center;
+    background-image: url('back.png');
+    background-size: cover;
+}
+
+.mainer::before {
+    content: "";
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
+    left: 0px;
+    background-color: rgba(0,0,0,0.25);
+} */
+.modifier h2{
+	text-align: center;
+	color:rgb(208, 241, 85);
+	
+}
+.modifier a{
+	display: inline-block;
+	text-align: center;
+	margin-top:40px;
+	margin-bottom: 40px;
+	width:20vw;
+	font-size: 1em;
+	margin-left: 40vw;
+	cursor: pointer;
+	
+}
+/*.container{
+   background: -webkit-linear-gradient(140deg, #9eeaee 0.42%, #ffffff);
+	background: linear-gradient(140deg, #9eeaee 0.42%, #ffffff);  
+    margin-bottom:10px;
+}*/
+.container h1{
+    font-family: Helvetica;
+    text-decoration: none;
+    font-weight:bold;
+    color:rgb(66, 132, 190);
+}
+
+.flip-card {
+  float: left;
+  margin: 33px;
+  width: 100%;
+  max-width: 300px;
+  height: 350px;
+  perspective: 1000px;
+	background-color: 
+		transparent;
+    
+}
+
+.flip-card-img {
+	height: 250px;
+	overflow: hidden;
+	background-color: gray;
+}
+
+.flip-card-text {
+	height: 100px;
+	overflow: hidden;
+	background-color: black;
+}
+
+.flip-card img {
+	width: 100%;
+}
+
+
+.flip-card h2 {
+	font-weight: 600;
+	font-size: 1.8em;
+    font-family: Helvetica;
+	color: grey;
+}
+
+.flip-card p.title {
+  color: grey;
+  text-align: center;
+  font-size: 1.5em;
+    font-family: Helvetica;
+}
+
+.flip-card p {
+	font-size: 1em;
+    font-family: Helvetica;
+}
+
+
+
+.flip-card:hover 
+{
+  opacity:0.6;
+}
+
+.flip-card-front a, 
+.flip-card-back a {
+  text-decoration: none;
+  font-size: 22px;
+  color: black;
+}
+
+
+.flip-card-front {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility:
+		hidden;
+  backface-visibility: hidden;
+}
+
+.flip-card-front {
+  color: black;
+	border: 
+		5px solid lightgray;
+	background-color: white;
+}
+    body
+    {
+     background: -webkit-linear-gradient(140deg, #9eeaee 0.42%, #ffffff);
+	background: linear-gradient(140deg, #9eeaee 0.42%, #ffffff);
+    }
+
+</style>
 
 
 </head>
@@ -12,11 +170,25 @@
 
 
 
-	<h1>This is Home Page</h1>
 
 
+
+
+
+	<main class="mainer">
+<div class="modifier">
+
+<h1>Home</h1>
+	
+    
+    
+    
+	<h2>
+		From here you can download the resources
+	</h2>
+    <a href="/resources" class="btn btn-lg btn-primary ">Resources</a>
     <% if(user&&user.admin) {%>
-       <p>If you are logged in you can visit upload page and upload your resources. Else you will be directed to login page. At the end of project we will allow only specific persons who can upload files. </p>
+       
 
 
 	<a href="/upload" class="btn btn-lg btn-primary">Let's Upload</a>
@@ -30,14 +202,64 @@
 	<a href="/addVideo" class="btn btn-lg btn-danger">Add Video Lecture Link</a>
 
     <% } %>
+</div>
+</main>
+<div class="container">
+	<h1 style="text-align: center;">Our Fields</h1>
+		<div class="flip-card">
+		
+			<div class="flip-card-front">
+				<div class="flip-card-img">
+					<img src="https://images.unsplash.com/photo-1525207106105-b340f7384b30?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Avatar Placeholder" />
+				</div>
+				<div class="flip-card-text">
+					<a href="/about"><h2 style="text-align: center;">About Us</h2></a>
+					
+				</div>
+			
+		</div>
+	</div>
 
+	<div class="flip-card">
+			<div class="flip-card-front">
+				<div class="flip-card-img">
+					<img src="https://images.unsplash.com/photo-1525207106105-b340f7384b30?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Avatar Placeholder" />
+				</div>
+				<div class="flip-card-text">
+                    <a href="/instructor"><h2 style="text-align: center;">Instructor</h2></a>
+					
+				</div>
+			
+		</div>
+	</div>
 
-	<h2>
-		From Here you can download our resources.
-	</h2>
-		<a href="/resources" class="btn btn-lg btn-primary ">See Our resources</a>
+	<div class="flip-card">
+		
+			<div class="flip-card-front">
+				<div class="flip-card-img">
+					<img src="https://images.unsplash.com/photo-1525207106105-b340f7384b30?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Avatar Placeholder" />
+				</div>
+				<div class="flip-card-text">
+					<a href="/contact"><h2 style="text-align: center;">Contact</h2></a>
+					
+				</div>
+			
+		</div>
+	</div>
 
-
-		<section>This is used to make page to cover full page otherwise footer not be at end , As content is not placed till now. We will remove it afterwards.</section>
+	<div class="flip-card">
+		
+			<div class="flip-card-front">
+				<div class="flip-card-img">
+					<img src="https://images.unsplash.com/photo-1525207106105-b340f7384b30?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Avatar Placeholder" />
+				</div>
+				<div class="flip-card-text">
+					<a href="/team"><h2 style="text-align: center;">Team</h2></a>
+					
+				</div>
+			
+		</div>
+	</div>
+</div>
 
 <%- include('partials/footer') %>
