--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,7 +7,9 @@
 <style>
 	.mainer{
 	background-image : url("../public/team/back.png");
-	background-repeat: no-repeat;
+        background-repeat: no-repeat;
+  background-attachment: fixed;
+	
 	height: 100vh;
     width: 100%;
 	margin-bottom: 15px;
