--- a/views/home.ejs
+++ b/views/home.ejs
@@ -250,7 +250,7 @@
 		</div>
 	</div>
   
-    
+    <% if(user&&user.admin) {%>
     <div class="flip-card">
 		
 			<div class="flip-card-front">
@@ -278,6 +278,7 @@
 			
 		</div>
 	</div>
+    <% } %>
     
 </div>
 
