--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -1,21 +1,76 @@
 <%- include('partials/header') %>
 
-<title>Upload files</title>
+<title>Upload File</title>
 
 <!-- Here you we will include other css and js files that are not to be used for every age -->
 
+
+<style type="text/css">
+
+
+	.jumbotron {
+ 
+  
+  font-size: 3rem;
+ 
+}
+
+body
+{
+	background-color: black;
+}
+
+label
+{
+	font-size: 3rem;
+	color: white;
+
+
+}
+
+.upload{
+	color:white;
+	
+
+}
+
+
+
+</style>
+
+
+
 </head>
+
+
 <body>
 
 <%- include('partials/navbar') %>
-<center>
 
-	<h1 style="color:black;font-size:45px;text-shadow:2px 1px 1px grey">Upload your file</h1><br /><br />
-	<form method="post" style="border: 1px dotted grey; width:500px;height:400px; background-color:lightblue"enctype="multipart/form-data" action="/upload">
-		<br /><br /><br /><br />
-		<input type="file" class="btn btn-lg btn-danger" name="filename" required>
-<br /><br />
-		<select id="fieldnames" class="btn btn-lg btn-danger" name="field_val">
+	
+<div class="container">
+
+<div class="jumbotron bg-cover text-white" style="background-image: linear-gradient(to bottom, rgba(0,0,0,0.6) 0%,rgba(0,0,0,0.6) 100%), url(https://i.imgur.com/xKrSHaM.png)">
+	<h3 class="upload"> Upload File </h3>
+	<form method="post" enctype="multipart/form-data" action="/upload">
+  
+  			<!--
+		  <div class="form-group">
+		    <label for="exampleInputEmail1">TITLE</label>
+		    <input type="text" class="form-control" id="exampleInputEmail1" placeholder="ENTER NAME FOR PDF">
+		  </div>
+		  	-->
+		  
+		 <div class="form-group">
+		    <label for="exampleInputFile">File input</label>
+		    <input type="file" id="exampleInputFile" name="filename" required> 
+		 </div>
+
+
+		 <div class="form-group">
+	
+		<label for="fieldnames">Select Chapter</label>
+		<select id="fieldnames"  name="field_val" class="form-control">
 		<option val="chapter1">Chapter1</option>
 		<option val="chapter2">Chapter2</option>
 		<option val="chapter3">Chapter3</option>
@@ -28,16 +83,22 @@
 		<option val="chapter10">Chapter10</option>
 		<option val="chapter11">Chapter11</option>
 		<option val="chapter12">Chapter12</option>
-
-
 		</select>
-<br /><br /><br /><br />
-		<input type="submit" class="btn btn-lg btn-primary" value="upload">
-	</form>
-
-	</center>
 
 
-		<section></section>
+		 </div>
 
+
+ 
+  <button type="submit" class="btn btn-primary" value="upload">Submit</button>
+</form>
+</div>
+</div>
+
+
+
+
+		
 <%- include('partials/footer') %>
+
+
