--- a/views/notes.ejs
+++ b/views/notes.ejs
@@ -26,7 +26,7 @@
               <!--Grid column-->
               <div class=" col-md-12">
 
-            <p class="notesname" style="color:black;font-size:25px;text-shadow:2px 1px 1px grey; display:block;"><%= file.fieldname %> </p>
+            <p class="notesname" style="color:black;font-size:25px;text-shadow:2px 1px 1px grey; display:block;"><%= file.name %> </p>
             <div id="Iframe-Cicis-Menu-To-Go" class="set-margin-cicis-menu-to-go set-padding-cicis-menu-to-go set-border-cicis-menu-to-go set-box-shadow-cicis-menu-to-go center-block-horiz">
               <div class="responsive-wrapper
                  responsive-wrapper-padding-bottom-90pct"
