--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -26,6 +26,7 @@
 		<ul class="nav navbar-nav navbar-right ml-auto">			
 
 				<% if (user) { %>
+            <li class="nav-item"><a href="/" class="nav-link">Welcome, <%=user.username%></a></li>
 			<li class="nav-item">
 				<!-- <a data-toggle="dropdown" class="nav-link dropdown-toggle" href="/auth/logout">Loggout</a> -->
 				<a class="nav-link btn btn-primary get-started-btn mt-1 mb-1" href="/auth/logout">Logout</a>
