--- a/views/home.ejs
+++ b/views/home.ejs
@@ -167,6 +167,18 @@
      background: -webkit-linear-gradient(140deg, #9eeaee 0.42%, #ffffff);
 	background: linear-gradient(140deg, #9eeaee 0.42%, #ffffff);
     }
+    
+@media (max-width: 1028px) {
+
+ .modifier h1{
+    text-align: left;
+  }
+    .modifier h2{
+    text-align: left;
+  }
+
+  
+}
 
 </style>
 
